--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -177,13 +177,14 @@
     background-color:white;
     position: fixed;
     padding-top:5px;
-    top: 110px;
+    //top: 150px;
+    z-index:0;
     span {
       border:solid @panel-default-border 1px;
       background-color:@alert-warning-bg;
       font-weight:bold;
       border-radius:4px;
-      padding:4px 7px;
+      padding:4px 15px;
       font-size:16px;
       cursor:pointer;
     }
