makra s html tagy v textu

--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -76,6 +76,10 @@
     Pokud byste se chtěl studiu jazyka věnovat intenzivněji a měl zájem i o gramatické výklady atd. dejte vědět Vaši úroveň pokročilosti, zašleme Vám navíc zdarma přístup k našim standardním jazykovým kurzům.
   </vyzva$faq$item>
   
+  <vyzva$faq$item type="Studují učitel" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu.">
+    Pravděpodobně jste ve <i>Vstupním</i> nebo <i>Kontrolním testu</i> nedosáhl(a) potřebného skóre. Musíte počkat, dokud <i>Lektor</i> nerozhodne o dalším postupu. Pokud chcete lektora kontaktovat, napište svůj dotaz (podle studovaného kurzu) na lector-english@langmaster.cz, lector-deutsch@langmaster.cz nebo lector-francais@langmaster.cz
+  </vyzva$faq$item>  
+  
   <h3 class="text-info">Dotazy Učitelů</h3>
   <vyzva$faq$item type="Učitel" title="Student dokončil test, ale já v jeho výsledcích vidím jeho test stále nedokončený.">
     V tomto případě stiskněte klávesu <b class="text-danger">F5</b> (refresh).<br />
