--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -75,7 +75,7 @@
       <h3 class="modal-title">Napište nám</h3>
     </div>
     <div class="modal-body">
-      <p>Popište prosím váš námět, připomínku nebo problém a stiskněte <b>Poslat</b>:</p>
+      <p>Pokud odpověď na váš dotaz není v často kladených dotazech, popište prosím váš námět, připomínku nebo problém a stiskněte <b>Poslat</b>:</p>
       <textarea class="form-control" rows="10" ng-model="$parent.copyrWriteUsText"></textarea>
     </div>
     <div class="modal-footer">
