--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -79,7 +79,8 @@
       <textarea class="form-control" rows="10" ng-model="$parent.copyrWriteUsText"></textarea>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-primary" type="button" lm-enter-key="::copyrShowWriteUsOK()" ng-click="::copyrShowWriteUsOK()">Poslat</button>
+      <!--<button class="btn btn-primary" type="button" lm-enter-key="::copyrShowWriteUsOK()" ng-click="::copyrShowWriteUsOK()">Poslat</button>-->
+      <button class="btn btn-primary" type="button" ng-click="::copyrShowWriteUsOK()">Poslat</button>
       <button class="btn btn-default" type="button" ng-click="::$dismiss()">Zrušit</button>
     </div>
   </div>
