remove unused debug and demo

--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-<div ng-click="::ts.debugClearProduct()" ng-if="::appService.isLangmasterUser()">del</div>
+<!--<div ng-click="::ts.debugClearProduct()" ng-if="::appService.isLangmasterUser()">del</div>-->
 
 <div class="alert help-panel help-warning" data-ng-if="::ts.ctx.onbehalfof" collapsablemanager="+homehelpstudentsresult">
   <div class="h3 help-header" ng-click="homehelpstudentsresult.collapseToogle()">
