--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -73,7 +73,7 @@
 <script type="text/ng-template" id="vyzva$exercise$lectorlesson.html">
   <div class="alert alert-danger">
     <h4>Celkové skóre: <b>{{::modService.agregUser.score}}</b></h4>
-    <button class="btn btn-danger" ng-click="::exService.confirmLesson()"><i class="fa fa-check"></i>Zopakovat lekci</button>
+    <button class="btn btn-danger" ng-click="::exService.confirmLesson(false)"><i class="fa fa-check"></i>Zopakovat lekci</button>
   </div>
 </script>
 
