before remove Saluse media kit

--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -27,12 +27,12 @@
     Pokud žádná z výše uvedených rad nepomůže, obraťte se na správce počítačů ve Vaší škole.
   </vyzva$faq$item>
 
-  <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi nahrávání v prohlížeči Google Chrome, Firefox, Opera (využívající HTML5).">
+  <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi nahrávání v prohlížeči Google Chrome, Firefox, Opera (využívající HTML5) na Windows/Android">
      Proveďte aktualizaci prohlížeče na poslední verzi. Zkuste ověřit  <a href="http://webaudiodemos.appspot.com/AudioRecorder/index.html" target="_blank">funkčnost nahrávání na této stránce</a>. Pokud nefunguje ani zde, pak je pravděpodobně něco špatně s konfigurací vašeho počítače.  
   </vyzva$faq$item>
 
-  <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi nahrávání v iOS Safari.">
-    Podpora nahrávání na této platformě je od verze 6.0. Pokud ji máte, tak zkuste ověřit  <a href="http://webaudiodemos.appspot.com/AudioRecorder/index.html" target="_blank">funkčnost nahrávání na této stránce</a>. Pokud nefunguje ani zde, pak je pravděpodobně něco špatně s konfigurací vašeho počítače.  
+  <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi nahrávání v iOS">
+    Nahrávání zvuku na iOS bohužel není možné. Příčinou jsou technická omezení ze strany Apple.  
   </vyzva$faq$item>
 
   <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi nahrávání v prohlížeči Internet Explorer (využívající Silverlight).">
