--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -64,6 +64,10 @@
     Pravděpodobně jste ve <i>Vstupním</i> nebo <i>Kontrolním testu</i> nedosáhl(a) potřebného skóre. Musíte počkat, dokud <i>Učitel</i> nerozhodne o dalším postupu.
   </vyzva$faq$item>
 
+  <vyzva$faq$item type="Student" title="Prošel jsem všechna cvičení lekce/testu, ale lekce/test se stále neukazuje jako dokončená.">
+    Pravděpodobně jste po vyhodnocení posledního cvičení kliknul na tlačítku "Zpět na kurz" místo zeleného tlačítka "Pokračovat v lekci/testu". Pokud lekci/test neukončíte zeleným tlačítkem, tento se nepřepne do dokončeného stavu. Pro dokončení lekce/testu se tam vraťte a lekci/test ukončete. 
+  </vyzva$faq$item>
+
   <h3 class="text-info">Dotazy Hostů</h3>
   <vyzva$faq$item type="Host" title="Jakým způsobem mohu projít celý kurz?">
     Protože účet hosta nemá přiřazeného žádného učitele, je nutné, aby byl každý test splněn alespoň na 65%. V tomto případě se budou automaticky odemykat další Studijní bloky. V opačném případě nebude možné pokračovat ve studiu.
