--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -48,6 +48,10 @@
     Kurzy se na jedné straně dají kompletně studovat doma (s tím, že učitele pouze kontroluje výsledky a doporučuje další postup), na druhé straně je možné je studovat i výhradně ve škole pod přímým dohledem učitele. Vhodný poměr mezi těmito krajními možnostmi může každý učitel stanovit podle vlastních metod výuky a možností školy i jednotlivých žáků.  
   </vyzva$faq$item>
 
+  <vyzva$faq$item type="Obecné dotazy" title="Nefunguje mi průchod kurzem pomocí zeleného tlačítka nebo stažení reportů.">
+    Jako první zkuste stejnou akci provést v jiném prohlížeče (Internet Explorer, Mozilla Firefox, Google Chrome ...) případně na jiném počítači. Pokud to tam bude fungovat, je problém pravděpodobně v konfiguraci daného prohlížeče. Zkuste prověřit, zda nemáte aktivní blokování vyskakovacích oken, blokovače reklam, příliš přísný antivir nebo nějaké omezení ve školní síti.
+  </vyzva$faq$item>
+
 
   <h3 class="text-info">Dotazy Studentů</h3>
 
