--- a/Web4/JsLib/css/Course.less
+++ b/Web4/JsLib/css/Course.less
@@ -1242,6 +1242,13 @@ input {
 
   &.a {
     .dlg-active(@oli-dialog-a);
+    //chyba, koliduje s class=a pro anchor v D:\LMCom\rew\Web4\BlendedAPI\Styles\other.less
+    color:@text-color;
+    &:hover,
+    &:focus {
+      color: @text-color;
+      text-decoration: none;
+    }
   }
 
   &.b {
