--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -61,7 +61,8 @@
   </vyzva$faq$item>
 
   <vyzva$faq$item type="Student" title="Nejsem spokojen s hodnocením v testu/lekci nebo s jazykovou úrovní získanou z rozřazovacího testu. / Kvůli technickým problémům jsem test/lekci pokazil.">
-    Domluvte se se svým <i>Učitelem</i>, tem vám může jakoukoliv část obnovit a vy ji můžete projít znovu.
+    Domluvte se se svým <i>Učitelem</i>, tem vám může jakoukoliv část obnovit a vy ji můžete projít znovu.<br/>
+    Po obnově testu se tlačítko <i>Výsledky</i> u daného testu/lekce změní zpět na tlačítko <i>Spustit</i>. Pokud tlačítko <i>Spustit</i> nevidíte, je potřeba obnovit stránku v prohlížeči nebo i promazat dočasné soubory. Dokud se tlačítko <i>Výsledky</i> nezmění na tlačítko <i>Spustit</i>, nemá smysl pokoušet se tuto část otvírat.
   </vyzva$faq$item>
 
   <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu.">
@@ -101,9 +102,15 @@
     Ano, samozřejmě.
   </vyzva$faq$item>
 
-  <vyzva$faq$item type="Učitel" title="Student není spokojen s výsledkem testu/lekce, jak s tím mohu udělat?">
+  <vyzva$faq$item type="Učitel" title="Student není spokojen s výsledkem testu/lekce, co s tím mohu udělat?">
     Máte možnost každý  test/lekci resetovat a určit k novému projití. Vyberte studijní skupinu, ve které je student přiřazený, klikněte na ikonku s výsledky v pravé části a poté otevřete dotyčný test/lekci. Kromě možnosti ohodnotit mluvení zde můžete danou test/lekci resetovat a student ji pak musí projít znovu. 
   </vyzva$faq$item>
+
+  <vyzva$faq$item type="Učitel" title="Studentovi se po dokončení testu neodemknul další studijní blok a nemůže tak pokračovat ve studiu.">
+    K automatickému odemčení dalšího studijního bloku dojde v případě, že student automaticky ohodnotitelná cvičení (1-5) splní alespoň na 65%. Pokud se mu to nepodaří, je na vás zda test obnovíte nebo ho necháte pokračovat.<br/>
+    Vyberte studijní skupinu, ve které je student přiřazený, klikněte na ikonku s výsledky v pravé části a poté otevřete dotyčný test. Kromě možnosti ohodnotit mluvení zde můžete danou test/lekci resetovat a student ji pak musí projít znovu. 
+  </vyzva$faq$item>
+
 
   <vyzva$faq$item type="Učitel" title="Co bude studovat vyspělý student (nebo studující učitel), když dokončí kurz na úrovni B2?">
     Takovým studentům poskytneme přístup k našim standardním kurzům. Navíc: bude-li zájem ze strany škol, jsme schopni připravit další kurzy, například na gramatiku, slovní zásobu apod.  
