commons, before extend x Object.assign

--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -31,7 +31,7 @@
   </div>
   <div class="keyboard-fixed" vyzva$exercise$keyboard ng-if="::exService.keyboardLine==5 && !modService.showResult()">
     Speciální znaky pro francouzštinu:
-    <span ng-repeat="ch in ['ç','Ç','à','è','â','ê','î','ô','û','ù','Ù']" vyzva$exercise$keyboardkey key="{{::ch}}">{{::ch}}</span> 
+    <span ng-repeat="ch in ['ç','Ç','à','è','â','ê','î','ô','Œ','œ','û','ù','Ù']" vyzva$exercise$keyboardkey key="{{::ch}}">{{::ch}}</span> 
   </div>
 </div>
 <div ng-include="'vyzva$common$copyright.html'"></div>
