--- a/WebCommon/Common/Layout/index.html
+++ b/WebCommon/Common/Layout/index.html
@@ -25,8 +25,8 @@
   <div id="app"></div>
   <hr />
   <p>
-    <a href="#" onclick="flux.recordStart()">recordStart</a><br />
-    <a href="#" onclick="flux.play(flux.recordEnd(), 300, function(){/*alert('done');*/})">recordEnd and play</a><br />
+    <a href="#" onclick="flux.recordStart(); return false;">recordStart</a><br />
+    <a href="#" onclick="flux.play(flux.recordEnd(), 300, function () {/*alert('done');*/ }); return false;">recordEnd and play</a><br />
   </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
