--- a/WebCommon/Common/Layout/index.html
+++ b/WebCommon/Common/Layout/index.html
@@ -27,6 +27,7 @@
   <p>
     <a href="#" onclick="flux.recordStart(); return false;">recordStart</a><br />
     <a href="#" onclick="flux.play(flux.recordEnd(), 300, function () {/*alert('done');*/ }); return false;">recordEnd and play</a><br />
+    <a href="#" onclick="flux.resetState(); return false;">reset</a><br />
   </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
