--- a/WebCommon/Views/Home/Index.cshtml
+++ b/WebCommon/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Controllers.HomeView
+﻿@*@model Controllers.HomeView*@
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,8 +6,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  @*
   @Model.csss();
   @Model.jss();
+  *@
 </head>
 <body>
   <div id="app"></div>
