--- a/DesignTimeLib/Design/jsWebApiProxy/WebApiProxyTempl.tt
+++ b/DesignTimeLib/Design/jsWebApiProxy/WebApiProxyTempl.tt
@@ -7,12 +7,7 @@
 <# //https://github.com/faniereynders/WebApiProxy/blob/master/WebApiProxy.Server/Templates/JsProxyTemplate.tt #>
 module proxies {
 
-  function invoke(url: string, type: string, queryPars: Object, body: string, completed: (res) => void): void {
-    var ajaxOption: JQueryAjaxSettings = { type : type, contentType : "application/json" };
-    ajaxOption.url = Pager.basicUrl + url; if (queryPars != null) ajaxOption.url += "?" + $.param(queryPars);
-    if (body) ajaxOption.data = body;
-    $.ajax(ajaxOption).done(data => completed(data)).fail(() => { debugger; Logger.error('proxies.ajax', url, ''); });
-  }
+  export var invoke: (url: string, type: string, queryPars: Object, body: string, completed: (res) => void) => void;
 
 <# foreach(var definition in Definitions) { #>
   export class <#= definition.Name.ToLower() #> {
