--- a/WebCommon/Views/Home/CommonTest.cshtml
+++ b/WebCommon/Views/Home/CommonTest.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApp.HomeModel
+﻿@model WebApp.ModelCommonTest
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +6,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  @*
-  @Model.csss();
-  @Model.jss();
-  *@
+  @Html.Raw(Model.css)
+  @Html.Raw(Model.cfg)
+  @Html.Raw(Model.js)
 </head>
 <body>
   <div id="app"></div>
@@ -19,6 +18,6 @@
     <a href="#" onclick="flux.play(flux.recordEnd(), 300, function () {/*alert('done');*/ }); return false;">recordEnd and play</a><br />
     <a href="#" onclick="flux.resetState(); return false;">reset</a><br />
   </p>
-  <script type="text/javascript" src="test.js"></script>
+  @Html.Raw(Model.startJS)
 </body>
 </html>
