--- a/WebCommon/Views/Home/DebugIndex.cshtml
+++ b/WebCommon/Views/Home/DebugIndex.cshtml
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Index</h1>
+  <h2>Index</h2>
+  <h3>Web4</h3>
+  <a href="/web4">Web4</a>
+  <h3>Common tests</h3>
+  <a href="/web/lib">Common</a><br />
+  <a href="/web/flux">Flux</a><br />
+  <a href="/web/uirouter">uiRouter</a><br />
+  <a href="/web/validation">Validation</a><br />
+  <a href="/web/login">Login</a><br />
+  <a href="/web/persist">Persist</a><br />
 </body>
 </html>
