--- a/WebCommon/wwwroot/Common/Layout/index.html
+++ b/WebCommon/wwwroot/Common/Layout/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script type="text/javascript" src="../../scripts/core.js"></script>
-  <script type="text/javascript" src="../../scripts/react.js"></script>
-  <script type="text/javascript" src="../../scripts/react-dom.js"></script>
   <script type="text/javascript" src="../../scripts/react-with-addons.js"></script>
-  <script type="text/javascript" src="../common/common.js"></script>
+  <script type="text/javascript" src="../../scripts/react-dom.js"></script>
+  <script type="text/javascript" src="../lib/common.js"></script>
   <script type="text/javascript" src="../flux/flux.js"></script>
   <script type="text/javascript" src="../layout/layout.js"></script>
 
