--- a/WebCommon/Views/Home/DebugIndex.cshtml
+++ b/WebCommon/Views/Home/DebugIndex.cshtml
@@ -9,13 +9,13 @@
 <body>
   <h2>Index</h2>
   <h3>Web4</h3>
-  <a href="/web4">Web4</a>
+  <a href="/web4/index.html">Web4</a>
   <h3>Common tests</h3>
-  <a href="/web/lib">Common</a><br />
-  <a href="/web/flux">Flux</a><br />
-  <a href="/web/uirouter">uiRouter</a><br />
-  <a href="/web/validation">Validation</a><br />
-  <a href="/web/login">Login</a><br />
-  <a href="/web/persist">Persist</a><br />
+  <a href="/web/lib.html">Common</a><br />
+  <a href="/web/flux.html">Flux</a><br />
+  <a href="/web/uirouter.html">uiRouter</a><br />
+  <a href="/web/validation.html">Validation</a><br />
+  <a href="/web/login.html">Login</a><br />
+  <a href="/web/persist.html">Persist</a><br />
 </body>
 </html>
