--- a/WebCommon/Views/Home/WebIndex.cshtml
+++ b/WebCommon/Views/Home/WebIndex.cshtml
@@ -10,6 +10,8 @@
   <h2>Index</h2>
   <h3>Web4</h3>
   <a href="/web4">Web4</a>
+  <h3>oAuth</h3>
+  <a href="/oAuth">oAuth</a>
   <h3>Common tests</h3>
   <a href="/web/lib">Common</a><br />
   <a href="/web/flux">Flux</a><br />
