--- a/WebCommon/Views/Home/WebIndex.cshtml
+++ b/WebCommon/Views/Home/WebIndex.cshtml
@@ -16,6 +16,7 @@
   <a href="/web/lib">Common</a><br />
   <a href="/web/flux">Flux</a><br />
   <a href="/web/uirouter">uiRouter</a><br />
+  <a href="/web/layout">Layout</a><br />
   <a href="/web/validation">Validation</a><br />
   <a href="/web/login">Login</a><br />
   <a href="/web/persist">Persist</a><br />
