Azure deployment, SWFiles refresh batch

--- a/TheWeb/Views/home/Common.cshtml
+++ b/TheWeb/Views/home/Common.cshtml
@@ -20,5 +20,7 @@
   <a href="/web/validation">Validation</a><br />
   <a href="/web/login">Login</a><br />
   <a href="/web/persist">Persist</a><br />
+  <h3>System</h3>
+  <a href="/api/system/resetcache">Reset Cache</a><br />
 </body>
 </html>
