--- a/TheWeb/Views/home/Common.cshtml
+++ b/TheWeb/Views/home/Common.cshtml
@@ -22,5 +22,6 @@
   <a href="/web/persist">Persist</a><br />
   <h3>System</h3>
   <a href="/api/system/resetcache">Reset Cache</a><br />
+  <a href="/api/system/deletelogfiles">Delete logs</a><br />
 </body>
 </html>
