Pred HTML5 Histroy

--- a/TheWeb/Views/home/Common.cshtml
+++ b/TheWeb/Views/home/Common.cshtml
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h2>Index</h2>
+  <a href="/web/testing">Testing</a><br />
   <h3>Web4</h3>
   <a href="/web4">Web4</a>
   <h3>oAuth</h3>
