Funkcni plny test (vcetne FB login) na Azure v Release verzi

--- a/TheWeb/Views/home/CommonTest.cshtml
+++ b/TheWeb/Views/home/CommonTest.cshtml
@@ -14,7 +14,7 @@
   <div id="app"></div>
   <hr />
   <p>
-    <a href='#' onClick="flux.doExternalNavigate('http://localhost:10101/web/testing', event)">Testing home</a>
+    <a href='#' onClick="flux.doExternalNavigate(router.named.testingTest.index, null, event)">Testing home</a>
     @*<a href="#" onclick="flux.recordStart(); return false;">recordStart</a><br />
     <a href="#" onclick="flux.play(flux.recordEnd(), function () {/*alert('done');*/ }); return false;">recordEnd and play</a><br />
     <a href="#" onclick="flux.resetState(); return false;">reset</a><br />*@
