--- a/TheWeb/Views/home/Web.cshtml
+++ b/TheWeb/Views/home/Web.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheWeb.ModelCommonTest 
+﻿@model TheWeb.ModelCfg 
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,18 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   @Html.Raw(Model.css)
-  @Html.Raw(Model.cfg)
-  @Html.Raw(Model.js)
 </head>
 <body>
   <div id="app"></div>
   <hr />
   <p>
-    <a href='#' onClick="flux.doExternalNavigate(router.named.testingTest.index, null, event)">Testing home</a>
+    <a href='#' onClick="testingTest.gotoTesting(event)">Testing home</a>
     @*<a href="#" onclick="flux.recordStart(); return false;">recordStart</a><br />
     <a href="#" onclick="flux.play(flux.recordEnd(), function () {/*alert('done');*/ }); return false;">recordEnd and play</a><br />
     <a href="#" onclick="flux.resetState(); return false;">reset</a><br />*@
   </p>
-  @Html.Raw(Model.startJS)
+  @Html.Raw(Model.cfg)
+  @Html.Raw(Model.js)
+  <script type="text/javascript">startProc();</script>
 </body>
 </html>
