--- a/TheWeb/Views/home/OAuth.cshtml
+++ b/TheWeb/Views/home/OAuth.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheWeb.ModelOAuth
+﻿@model TheWeb.ModelCfg
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,8 +12,6 @@
 </head>
 <body>
   <h3 id="error-place"></h3>
-  <script type="text/javascript">
-    oauth.loginPageEnter();
-  </script>
+  <script type="text/javascript">startProc();</script>
 </body>
 </html>
